--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body{
   }  
 h1 {
     text-align: center;
-    font-size:xx-large;
+    font-size: 10ch;
     font-family: sans-serif;
     color:  rgb(87, 34, 221);
 }
