--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
-body{
+html body{
     background-color: rgb(168, 225, 225);
     background-image: url('../flags/big_bg.png'); /* 替换为真实的图片路径 */
     background-size: cover; /* 背景图片覆盖整个页面 */
     background-repeat: no-repeat; /* 不重复背景图片 */
     background-position: center center; /* 背景图片居中对齐 */
+    margin: 0;
+    padding-bottom: 50px;
+    height: 100%;
+    font-family: sans-serif;
   }  
 h1 {
     text-align: center;
@@ -12,9 +16,26 @@ h1 {
     color:  rgb(87, 34, 221);
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px; /* Set the fixed height of the footer here */
+}
+
 .text-title{
     text-align: center;
     font-size: 4ch;
+    font-family: sans-serif;
+}
+.text-normal {
+    font-size:normal;
+}
+.text-large {
+  font-size:large;
+}
+.text-bold {
+    font-weight: bold;
     font-family: sans-serif;
 }
 .text-blue {
