--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,41 @@ footer {
   margin-top: 50px;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px;
+}
+.input_box {
+  display: inline-block;
+  background: rgba(255, 255, 255, 0);
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  padding: 10px 20px;
+  border: 0 solid rgba(183,183,183,0.95);
+  border-bottom: 1px solid #b7b7b7;
+  font: normal 18px/normal "Comic Sans MS", cursive, sans-serif;
+  color: rgba(0,142,198,1);
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  -webkit-box-shadow: 0 0 0 0 rgba(0,0,0,0.2) inset;
+  box-shadow: 0 0 0 0 rgba(0,0,0,0.2) inset;
+  text-shadow: 1px 1px 2px rgba(170,164,164,0.74) ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+.input_box:focus {
+  border: 0 solid rgba(183,183,183,0.95);
+  border-bottom: 2px solid rgba(87,127,147,0.9);
+  background: rgb(191, 205, 240);
+}
+
 #scoreboard {
     text-align: right;
     font-size: larger;
